small color and font updates
Signed-off-by: Flynn Joffray <nucleardreamer@gmail.com>

--- a/templates/default.html
+++ b/templates/default.html
@@ -11,6 +11,9 @@
     <meta property="og:title" content="{{ title }} - {{ $names.company.upper }} Documentation" />
     {% if excerpt %}<meta property="og:description" content="{{ excerpt }}" />{% endif %}
     <meta property="og:image" content="{% if thumbnail %}{{ thumbnail }}{% else %}{{ defaultThumbnail }}{% endif %}" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/dist/style.css">
     <!-- Algolia search styles -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.css" />
