--- a/static/css/menu-top.css
+++ b/static/css/menu-top.css
@@ -20,7 +20,7 @@
   line-height: 0.9;
 }
 .navbar .navbar-nav > li > a.btn-primary {
-  color: #474747;
+  color: #2a506f;
 }
 
 .navbar-right.menu__items {
@@ -36,7 +36,7 @@
   left: 0;
   top: 0;
   right: 0;
-  background: #2d2d2d;
+  background: #2a506f;
 }
 .menu__nav {
   background-color: rgba(0, 0, 0, 0);
@@ -178,7 +178,7 @@ fieldset[disabled] .menu__nav .btn-link:focus {
   font-size: 14px;
   line-height: 1.5;
   border-radius: 5px;
-  color: #474747;
+  color: #2a506f;
   background-color: #fcc100;
   border-color: #fcc100;
   font-size: inherit;
@@ -188,7 +188,7 @@ fieldset[disabled] .menu__nav .btn-link:focus {
 .menu__item--btn-group .btn:active,
 .menu__item--btn-group .btn.active,
 .open > .dropdown-toggle.menu__item--btn-group .btn {
-  color: #474747;
+  color: #2a506f;
   background-color: #c99a00;
   border-color: #bf9200;
 }
@@ -217,7 +217,7 @@ fieldset[disabled] .menu__item--btn-group .btn.active {
 }
 .menu__item--btn-group .btn .badge {
   color: #fcc100;
-  background-color: #474747;
+  background-color: #2a506f;
 }
 .menu__item--btn-group .btn:last-child {
   padding-right: 15px;
@@ -268,7 +268,7 @@ fieldset[disabled] .menu__item--btn-group .btn.active {
 }
 .menu__nav li.menu__item--button > a {
   padding: 13px 16px;
-  color: #474747;
+  color: #2a506f;
 }
 .menu--bottom .menu__items {
   margin-top: 136px;
@@ -312,14 +312,14 @@ fieldset[disabled] .menu__item--btn-group .btn.active {
   left: 0;
   right: 0;
   display: none;
-  background: #323232;
+  background: #2a506f;
   border: none;
   -moz-box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.2);
   -webkit-box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.2);
   box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.2);
 }
 .navbar--mobile .navbar-header {
-  background-color: #383838;
+  background-color: #2a506f;
   height: 56px;
 }
 .navbar--mobile .navbar-header .btn {
@@ -427,7 +427,7 @@ fieldset[disabled] .menu__item--btn-group .btn.active {
 }
 
 .navbar-submenu .navbar-header {
-  background-color: #429ece;
+  background-color: #00aeef;
   text-align: left;
 }
 .navbar-submenu .navbar-header a,
